Tests/Neg/UndeclaredIds/UndeclaredEvent2.p
main model machine Foo {
    start state S1 {
        ignore Bar;
        entry {
        }
    }   
}
